<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_modern"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/menu_modern_resto" />
        <item
            android:id="@+id/nav_traditional"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/menu_traditional_resto" />
        <item
            android:id="@+id/logout"
            android:onClick="logout"
            android:icon="@drawable/ic_keyboard_tab_black_24dp"
            android:title="@string/logout"/>
    </group>
</menu>
