<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.ftiuksw.tr_pam_mamam.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

    </fragment>


    <fragment
        android:id="@+id/nav_modern"
        android:name="edu.ftiuksw.tr_pam_mamam.ui.Modern_Resto_Folder.ModernRestoFragment"
        android:label="@string/menu_modern_resto"
        tools:layout="@layout/fragment_modern_resto" />

    <fragment
        android:id="@+id/nav_traditional"
        android:name="edu.ftiuksw.tr_pam_mamam.ui.Traditional_Resto_Folder.TraditionalRestoFragment"
        android:label="@string/menu_traditional_resto"
        tools:layout="@layout/fragment_traditional_resto" />
</navigation>