<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.Modern_Resto_Folder.kfc">
android:background="#ecb390">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment"
        android:background="#ecb390"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/akwjdg"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_kfc"
            />
        <TextView
            android:id="@+id/title_kfc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kfc"
            android:fontFamily="@font/leckerli_one"
            android:textSize="60dp"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/akwjdg"
            />


        <TextView
            android:id="@+id/penjelasan_kfc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kfc_desc"
            android:textSize="20dp"
            android:textColor="#000000"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:layout_below="@id/zzz"/>
        <Button
            android:id="@+id/btn_kfc"
            android:text="@string/map_btn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Cream Soup                                             Rp. 5.800"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="34dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="KFC Puding                                             Rp. 5.800"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="34dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="KFC Soup                                                Rp. 5.800"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="32dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Perkedel                                                   Rp. 5.800"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Chicken Crispy                                        Rp. 10.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Chicken Original                                      Rp. 13.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Crispy Strip                                               Rp. 10.000 "
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="French Fries Large                                  Rp. 14.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="KFC Organic Rice                                    Rp.   4.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Whole Chicken Original                           Rp. 108.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Wing Bucket Crispy                                 Rp. 67.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Wing Bucket Original                               Rp. 67.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Yakiniku                                                    Rp. 19.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="   Whole Chicken Original                           Rp. 101.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="1 Pc Chicken Original                              Rp. 13.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"/>


    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>