<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.Traditional_Resto_Folder.Angkringan"
android:background="#ecb390">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment"
        android:background="#ecb390"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/akwjdg"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_angkringan"
            />
        <TextView
            android:id="@+id/title_angkringan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angkringan"
            android:fontFamily="@font/leckerli_one"
            android:textSize="60dp"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/akwjdg"
            />


        <TextView
            android:id="@+id/penjelasan_angkringan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angkringan_desc"
            android:textSize="20dp"
            android:textColor="#000000"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:layout_below="@id/zzz"/>
        <Button
            android:id="@+id/btn_angkringans"
            android:text="@string/map_btn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="Tante Goreng Double                                       Rp 11.000"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Intel Groeng Doubel                                          Rp 15.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Intel Goreng Single                                            Rp 10.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Tante Goreng                                                  Rp 8.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Tempe bacem                                                  Rp 2.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Nasi Kucing                                                     Rp 2.500"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Puyuh Bacem                                                  Rp 3.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Pepes Telor Asin                                             Rp 5.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Tempe Penyet                                                 Rp 4.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Keong Pedas                                                   Rp 8.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Usus Pedas                                                      Rp 4.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Jamur Pedas                                                   Rp 6.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Ceker Pedas                                                    Rp 7.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Jantung Bacem                                                 Rp 10.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Sate Sosis                                                        Rp 3.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Nasi Goreng                                                       Rp 12.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text=" Nasi Bakar                                                       Rp 6.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Nasi Liwet                                                         Rp 8.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Ayam Geprek                                                        Rp 14.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Sambal Goreng                                                   Rp 3.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Rendang Ayam                                                    Rp 14.000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>